// DBML file for LungLife Database
// Copy this content to dbdiagram.io to visualize the ERD

Project LungLife {
  database_type: 'PostgreSQL'
  Note: 'Lung Life Database Schema for MVP'
}

Table roles {
  role_id int [pk, increment]
  role_name varchar(50) [unique, not null]
  description_role text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table users {
  user_id int [pk, increment]
  email varchar(255) [unique, not null]
  email_verified boolean [default: false]
  last_login timestamp
  login_count int [default: 0]
  accept_terms boolean [default: false]
  accept_privacy boolean [default: false]
  marketing_consent boolean [default: false]
  is_active boolean [default: true]
  role_id int [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table user_auth {
  auth_id int [pk, increment]
  user_id int [unique, not null]
  password_hash varchar(255) [not null]
  password_changed_at timestamp
  two_fa_secret varchar(255)
  two_fa_enabled boolean [default: false]
  two_fa_method varchar(20) [default: 'NONE']
  failed_login_attempts int [default: 0]
  account_locked_until timestamp
  last_password_change timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table password_resets {
  reset_id int [pk, increment]
  user_id int [not null]
  password_reset_token varchar(255) [unique, not null]
  password_reset_expires timestamp [not null]
  is_used boolean [default: false]
  used_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table refresh_tokens {
  token_id int [pk, increment]
  user_id int [not null]
  token_hash varchar(255) [not null]
  jti varchar(255) [unique, not null]
  user_agent text
  ip_address varchar(45)
  device_fingerprint varchar(255)
  issued_at timestamp [not null]
  expires_at timestamp [not null]
  is_revoked boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table email_verifications {
  verification_id int [pk, increment]
  user_id int [not null]
  verification_token varchar(255) [unique, not null]
  expires_at timestamp [not null]
  verified_at timestamp
  email_sent_at timestamp
  verification_type varchar(20)
  new_email varchar(255)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table patient {
  patient_id int [pk, increment]
  user_id int [unique]
  patient_name varchar(100) [not null]
  patient_last_name varchar(100) [not null]
  date_of_birth date
  gender varchar(20)
  height_cm decimal(5,2)
  weight_kg decimal(5,2)
  phone varchar(20)
  country varchar(100) [default: 'Chile']
  city varchar(100)
  area_residence varchar(50)
  occupation varchar(100)
  emergency_contact_name varchar(100)
  emergency_contact_phone varchar(20)
  registration_date date [default: `CURRENT_DATE`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table doctor {
  doctor_id int [pk, increment]
  user_id int [unique]
  doctor_name varchar(100) [not null]
  doctor_last_name varchar(100) [not null]
  date_of_birth date
  gender varchar(20)
  specialty varchar(100)
  medical_license varchar(50) [unique, not null]
  hospital_institution varchar(200)
  phone varchar(20)
  email_institutional varchar(255)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table relation_patient_doctor {
  relation_id int [pk, increment]
  patient_id int
  doctor_id int
  assignment_date date [default: `CURRENT_DATE`]
  active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (doctor_id, patient_id) [unique]
  }
}

Table risk_factors {
  factor_id int [pk, increment]
  patient_id int
  family_history_cancer boolean [default: false]
  toxin_exposure boolean [default: false]
  air_quality_index int
  physical_activity_level varchar(20)
  dietary_habits varchar(20)
  imc decimal(5,2)
  evaluation_date date [default: `CURRENT_DATE`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table smoking_history {
  smoking_id int [pk, increment]
  patient_id int
  smoking_date date [not null, default: `CURRENT_DATE`]
  smoking_status varchar(20) [not null]
  cigarettes_per_day int
  start_date date
  quit_date date
  is_current_status boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table medical_history {
  history_id int [pk, increment]
  patient_id int
  doctor_id int
  entry_type varchar(20) [not null]
  entry_name varchar(200) [not null]
  details text
  status varchar(20) [default: 'ACTIVE']
  start_date date
  end_date date
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table lifestyle_habits {
  habit_id int [pk, increment]
  patient_id int
  alcohol_consumption varchar(20)
  alcohol_units_per_week int
  physical_activity_frequency varchar(20)
  physical_activity_minutes_weekly int
  diet_type varchar(50)
  sleep_duration_hours decimal(3,1)
  stress_level varchar(20)
  is_current boolean [default: true]
  effective_date date [default: `CURRENT_DATE`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table symptom {
  symptom_id int [pk, increment]
  patient_id int
  chest_pain boolean [default: false]
  shortness_of_breath boolean [default: false]
  chronic_cough boolean [default: false]
  weight_loss boolean [default: false]
  fatigue boolean [default: false]
  hemoptysis boolean [default: false]
  report_date date [default: `CURRENT_DATE`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table diagnostic_test {
  test_id int [pk, increment]
  patient_id int
  test_type varchar(50)
  lung_function decimal(5,2)
  tumor_size_cm decimal(5,2)
  tumor_location varchar(100)
  metastasis boolean [default: false]
  metastasis_location text
  stage_of_cancer varchar(10)
  treatment_type varchar(50)
  test_date date
  result_date date [default: `CURRENT_DATE`]
  medical_center varchar(200)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table comorbidities {
  comorbidity_id int [pk, increment]
  comorbidity_code varchar(10) [unique, not null]
  comorbidity_name varchar(100) [unique, not null]
  description text
  category varchar(50)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table patient_comorbidities {
  patient_id int
  comorbidity_id int
  diagnosis_date date [default: `CURRENT_DATE`]
  is_active boolean [default: true]
  treatment_status varchar(20)
  notes text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (patient_id, comorbidity_id) [pk]
  }
}

Table ml_predictions {
  prediction_id int [pk, increment]
  patient_id int
  risk_score decimal(5,2) [not null]
  risk_level varchar(20) [not null]
  confidence decimal(5,2)
  model_version varchar(50) [default: 'v1.0']
  input_features jsonb
  assessment_type varchar(50) [default: 'AUTOMATED']
  reviewed_by_doctor_id int
  reviewed_at timestamp
  prediction_date timestamp [default: `CURRENT_TIMESTAMP`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  is_current boolean [default: true]
}

Table occupational_exposure {
  exposure_id int [pk, increment]
  patient_id int
  exposure_type varchar(100) [not null]
  exposure_description text
  years_exposed int
  risk_contribution varchar(20)
  is_active boolean [default: true]
  start_date date
  end_date date
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// Relationships
Ref: users.role_id > roles.role_id
Ref: user_auth.user_id - users.user_id [delete: cascade]
Ref: password_resets.user_id > users.user_id [delete: cascade]
Ref: refresh_tokens.user_id > users.user_id [delete: cascade]
Ref: email_verifications.user_id > users.user_id [delete: cascade]
Ref: patient.user_id - users.user_id
Ref: doctor.user_id - users.user_id
Ref: relation_patient_doctor.patient_id > patient.patient_id
Ref: relation_patient_doctor.doctor_id > doctor.doctor_id
Ref: risk_factors.patient_id > patient.patient_id [delete: cascade]
Ref: smoking_history.patient_id > patient.patient_id [delete: cascade]
Ref: medical_history.patient_id > patient.patient_id
Ref: medical_history.doctor_id > doctor.doctor_id
Ref: lifestyle_habits.patient_id > patient.patient_id [delete: cascade]
Ref: symptom.patient_id > patient.patient_id [delete: cascade]
Ref: diagnostic_test.patient_id > patient.patient_id [delete: cascade]
Ref: patient_comorbidities.patient_id > patient.patient_id [delete: cascade]
Ref: patient_comorbidities.comorbidity_id > comorbidities.comorbidity_id
Ref: ml_predictions.patient_id > patient.patient_id [delete: cascade]
Ref: ml_predictions.reviewed_by_doctor_id > doctor.doctor_id
Ref: occupational_exposure.patient_id > patient.patient_id [delete: cascade]
